CB-30873 Wait for services to be healthy after restarting instances